<resources>
    <string name="app_name">V-Runner</string>
    <string name="google_maps_key">AIzaSyBwOTF3mMeic-rvR9oW9SgBO-ynap6gYZQ</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="Runs">Runs</string>
    <string name="nav_header">Nav Header Background</string>
    <string name="distance">%s Km</string>
    <string name="calories">%s Kcal</string>
    <string name="speed">%s Km/H</string>
    <string name="timestamp">%s</string>
    <string name="time">%s min</string>
    <string name="training">Training</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="your_runs">Your Runs</string>
    <string name="finish_run">Finish Run</string>
    <string name="new_run">New Run</string>
    <string name="chronometer">00:00:00:00</string>
    <string name="runner_photo">Runner\'s photo</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_time">Total Time</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="average_speed">Average Speed</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="start_run">Start run</string>
    <string name="empty" />

    <string name="sign_up">Sign up</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="empty_fields">Empty Fields</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="registration_error">Registration error, Please try again</string>
    <string name="error">Error, please try again</string>
    <string name="email_reset_password">"We have sent an email to reset your password"</string>
    <string name="user_not_found">User not found</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="login_error">Login error, please try again</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="configurations">Configurations</string>
    <string name="you_need_to_accept_location_permissions">You need to accept location permissions to use this app.</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

</resources>