<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.meazza.v_runner.ui.runs.RunsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_runs" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.meazza.v_runner.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_stats"
        android:name="com.meazza.v_runner.ui.stats.StatsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.meazza.v_runner.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@xml/root_preferences" />
</navigation>