<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.meazza.v_runner.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginFragment">

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textShortMessage|textEmailAddress"
            android:text="@={viewModel.runnerEmail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@={viewModel.runnerPassword}"
            app:layout_constraintEnd_toEndOf="@+id/et_email_login"
            app:layout_constraintStart_toStartOf="@+id/et_email_login"
            app:layout_constraintTop_toBottomOf="@+id/et_email_login" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> viewModel.loginWithEmailAndPassword()}"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/et_password_login"
            app:layout_constraintStart_toStartOf="@+id/et_password_login"
            app:layout_constraintTop_toBottomOf="@+id/et_password_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>